--- a/auctions/static/sass/components/_general.scss
+++ b/auctions/static/sass/components/_general.scss
@@ -12,4 +12,26 @@ body {
     position: relative;
 }
 
+.container-msg { 
+    width: 100%;
+    overflow: hidden;
+}
+.message-sv-err { 
+    color: white;
+    background: #ff6961;
+    padding: 15px;
+    display: flex;
+    margin: 20px 0;
+    border-radius: 15px;
+    font-size: 0.9em;
+    animation: hiddenMsg 10s ease;
+    animation-fill-mode: forwards;
+    transition: 0.4s;
+    overflow: hidden;
+}
 
+@keyframes hiddenMsg { 
+    0% { margin-top: 20px; }
+    80% { margin-top: 20px; opacity: 1;}
+    100% { margin-top: -100px; opacity: 0; }
+}
