--- a/auctions/static/sass/components/_header.scss
+++ b/auctions/static/sass/components/_header.scss
@@ -6,12 +6,14 @@ header {
     align-items: center;
     flex-wrap: wrap;
     padding: 0 5rem;
+    z-index: 999999999;
     nav { 
         width: 100%;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
+        z-index: 999999999;
         ul { 
             display: flex;
             list-style: none;
