--- a/auctions/static/sass/components/_product_view.scss
+++ b/auctions/static/sass/components/_product_view.scss
@@ -1,4 +1,13 @@
 @import './colors';
+
+.container-product { 
+    min-height: 100vh;
+    position: absolute;
+    display: flex;
+    width: 100%;
+    top: 0;
+    z-index: 5;
+}
 .wrapper-product-view { 
     width: 100%;
     height: 90vh;
@@ -92,4 +101,38 @@
         }
     }
 
+}
+
+.wrapper-comments{ 
+    width: 100%;
+    min-height: 10vh;
+ 
+    position: absolute;
+    margin-top: 90vh;
+    .header-comment { 
+        width: 100%;
+        padding: 20px;
+        form { 
+            padding: 0;
+            margin: 0;
+            background: none;
+            display: flex;
+            flex-direction: row;
+            margin: 0 auto;
+            width: 100%;
+            padding: 0 4rem;
+            input { 
+                width: 100%;
+                padding: 15px;
+                border-radius: 10px;
+            }
+            button { 
+                background: black;
+                padding: 15px;
+                min-width: 150px;
+                color: white;
+                border-radius: 10px;
+            }
+        }
+    }
 }
