--- a/auctions/templates/layout/base.html
+++ b/auctions/templates/layout/base.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
+
+    <div class="advertisement">
+        <h1>Advertisement</h1>
+        <p>The page is not available in its responsive form due to: 1) It was created for learning purposes for the CS50 Web Programming with Python and JavaScript course and there is no specification that the page must be responsive, so I don't see any sense in it. 2) Timing issues.
+        <br><br>If you want to see more of my work, on my GitHub you will find more fully responsive web pages. Thanks for understanding.  
+        <br><br>Regards.</p>
+    </div>
     <header>
         <nav>
             <ul>
