--- a/auctions/static/sass/components/_general.scss
+++ b/auctions/static/sass/components/_general.scss
@@ -35,3 +35,29 @@ body {
     80% { margin-top: 20px; opacity: 1;}
     100% { margin-top: -100px; opacity: 0; }
 }
+
+.advertisement {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: black;
+    width: 100%;
+    height: 100%;
+    color: white;
+    z-index: 199999999999999999999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    h1 {
+
+        background: white;
+        color: black;
+    }
+    p { 
+        text-align: center;
+        max-width: 65ch;
+        padding: 2em 4em;
+    }
+}
+
