--- a/auctions/static/sass/components/_product_view.scss
+++ b/auctions/static/sass/components/_product_view.scss
@@ -110,6 +110,7 @@
     position: absolute;
     margin-top: 90vh;
     .header-comment { 
+        margin-top: 15px;
         width: 100%;
         padding: 20px;
         form { 
