--- a/auctions/templates/layout/base.html
+++ b/auctions/templates/layout/base.html
@@ -26,10 +26,10 @@
             </ul>
             <ul>
                 <li><a href="{% url 'index' %}">Products</a></li>
-                <li><a href="">Categories</a></li>
+                <li><a href="{% url 'view_categories' %}">Categories</a></li>
                 {% if user.is_authenticated %}
                     <li><a href="">Create</a></li>
-                    <li><a href="">Watchlist</a></li>
+                    <li><a href="{% url 'view_watchlist' %}">Watchlist</a></li>
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
                     <li><a href="{% url 'login' %}">Login</a></li>
