--- a/auctions/templates/categories.html
+++ b/auctions/templates/categories.html
@@ -13,7 +13,7 @@
         gap: 10px;"
     >
     {% for categoria in tipos %}
-        <a href=""> 
+        <a href="/categories/{{ categoria }}"> 
             <div style="
             width: 300px;
             height: 90px;
