--- a/auctions/templates/inactive.html
+++ b/auctions/templates/inactive.html
@@ -2,7 +2,7 @@
 {% block body %}
 
     <div class="box-inactive" style="width: 100%; text-align: center; height: 60px;" >
-        <a href="{% url 'index' %}">Active</a>
+        <a href="{% url 'index' %}" style="color: black;">Active</a>
     </div>
     <div class="wrapper-catalog">
         {% for item in products %}
